Too dark text fixed

--- a/app/assets/stylesheets/tal.css.scss
+++ b/app/assets/stylesheets/tal.css.scss
@@ -49,6 +49,7 @@ body {
  background: #4c4246;
  font-family: 'Proxima Nova', 'proximanova400', proximanova400, Arial, Tahoma, sans-serif;
  font-weight: 400;
+ color: #9f9197;
 }
 div.content,
 article.content {
